# rust-obj

./: Cargo.toml  build.rs
schema/: cache.capnp
src/: codec.rs  error.rs  lib.rs  main.rs  message.rs  service.rs
src/client/: mod.rs
src/server/: mod.rs
