[package]
name = "objcache"
version = "0.1.0"
authors = ["Davis Wahl <dwahl@signalpath.com>"]

build = "build.rs"

[dependencies]
bytes = "0.4"
futures = "0.1"
capnp = "0.8"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-io = "0.1"

serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"

futures-cpupool = "0.1"

[build-dependencies]
capnpc = "0.8"
